-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.10.0
-
None
-
3
-
9223372036854775807
The builds at build.lustre.org are now failing consistently on RHEL 7.2:
http://build.lustre.org/builders/CentOS%207.2%20x86_64%20%28BUILD%29/builds/7890
Making all in ldiskfs
Applying ext4 patches: rhel7/ext4-inode-version.patch rhel7/ext4-lookup-dotdot.patch rhel6.3/ext4-print-inum-in-htree-warning.patch rhel7/ext4-prealloc.patch rhel7/ext4-mballoc-extra-checks.patch rhel7/ext4-misc.patch rhel7/ext4-osd-iop-common.patch rhel7/ext4-hash-indexed-dir-dotdot-update.patch rhel7/ext4-kill-dx-root.patch rhel7/ext4-mballoc-pa-free-mismatch.patch rhel7/ext4-data-in-dirent.patch rhel7.2/ext4-large-eas.patch rhel7/ext4-disable-mb-cache.patch rhel7/ext4-nocmtime.patch rhel7/ext4-large-dir.patch rhel7.2/ext4-pdirop.patch rhel7/ext4-max-dir-size.patch rhel7/ext4-remove-truncate-warning.patch rhel7/ext4-corrupted-inode-block-bitmaps-handling-patches.patch rhel7/ext4-give-warning-with-dir-htree-growing.patch rhel7/ext4-mmp-brelse.patch rhel7/ext4-jcb-optimization.patch rhel7/ext4_s_max_ext_tree_depth.patch rhel7.2/ext4-release-bh-in-makeinxdir.patch rhel7.2/ext4-dont-check-in-ro.patch rhel7.2/ext4-dont-check-before-replay.patch rhel7.2/ext4-remove-i_data_sem-from-xattr.patch rhel7/ext4-projid-ignore-maxquotas.patch rhel7/ext4-projid-feature-support.patch rhel7/ext4-projid-quotas.patch rhel7/ext4-projid-xfs-ioctls.patch rhel7/ext4-export-__ext4_ioctl_setproject-for-lustre.patch
Replacing 'ext4' with 'ldiskfs': xattr.h acl.h mballoc.h truncate.h extents_status.h ext4.h ext4_extents.h ext4_jbd2.h ioctl.c dir.c fsync.c indirect.c ext4_jbd2.c migrate.c page-io.c xattr_user.c acl.c extents.c namei.c move_extent.c xattr.c symlink.c inode.c file.c mmp.c super.c hash.c xattr_security.c bitmap.c ialloc.c extents_status.c block_validity.c mballoc.c inline.c balloc.c xattr_trusted.c resize.c mmp.c htree_lock.c ext4.h ext4_extents.h ext4_jbd2.h ext4.h htree_lock.h
Making all in .
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c: In function 'ldiskfs_iflags_to_xflags':
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:412:13: error: 'FS_XFLAG_SYNC' undeclared (first use in this function)
xflags |= FS_XFLAG_SYNC;
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:412:13: note: each undeclared identifier is reported only once for each function it appears in
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:414:13: error: 'FS_XFLAG_IMMUTABLE' undeclared (first use in this function)
xflags |= FS_XFLAG_IMMUTABLE;
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:416:13: error: 'FS_XFLAG_APPEND' undeclared (first use in this function)
xflags |= FS_XFLAG_APPEND;
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:418:13: error: 'FS_XFLAG_NODUMP' undeclared (first use in this function)
xflags |= FS_XFLAG_NODUMP;
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:420:13: error: 'FS_XFLAG_NOATIME' undeclared (first use in this function)
xflags |= FS_XFLAG_NOATIME;
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:422:13: error: 'FS_XFLAG_PROJINHERIT' undeclared (first use in this function)
xflags |= FS_XFLAG_PROJINHERIT;
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c: In function 'ldiskfs_xflags_to_iflags':
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:431:15: error: 'FS_XFLAG_SYNC' undeclared (first use in this function)
if (xflags & FS_XFLAG_SYNC)
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:433:15: error: 'FS_XFLAG_IMMUTABLE' undeclared (first use in this function)
if (xflags & FS_XFLAG_IMMUTABLE)
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:435:15: error: 'FS_XFLAG_APPEND' undeclared (first use in this function)
if (xflags & FS_XFLAG_APPEND)
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:437:15: error: 'FS_XFLAG_NODUMP' undeclared (first use in this function)
if (xflags & FS_XFLAG_NODUMP)
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:439:15: error: 'FS_XFLAG_NOATIME' undeclared (first use in this function)
if (xflags & FS_XFLAG_NOATIME)
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:441:15: error: 'FS_XFLAG_PROJINHERIT' undeclared (first use in this function)
if (xflags & FS_XFLAG_PROJINHERIT)
^
In file included from /tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ldiskfs_jbd2.h:20:0,
from /tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:19:
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c: In function 'ldiskfs_ioctl':
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ldiskfs.h:630:33: error: 'FS_IOC_FSGETXATTR' undeclared (first use in this function)
#define LDISKFS_IOC_FSGETXATTR FS_IOC_FSGETXATTR
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:781:7: note: in expansion of macro 'LDISKFS_IOC_FSGETXATTR'
case LDISKFS_IOC_FSGETXATTR:
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:783:18: error: storage size of 'fa' isn't known
struct fsxattr fa;
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:786:25: error: invalid application of 'sizeof' to incomplete type 'struct fsxattr'
memset(&fa, 0, sizeof(struct fsxattr));
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:783:18: error: unused variable 'fa' [-Werror=unused-variable]
struct fsxattr fa;
^
In file included from /tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ldiskfs_jbd2.h:20:0,
from /tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:19:
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ldiskfs.h:631:33: error: 'FS_IOC_FSSETXATTR' undeclared (first use in this function)
#define LDISKFS_IOC_FSSETXATTR FS_IOC_FSSETXATTR
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:802:7: note: in expansion of macro 'LDISKFS_IOC_FSSETXATTR'
case LDISKFS_IOC_FSSETXATTR:
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:804:18: error: storage size of 'fa' isn't known
struct fsxattr fa;
^
/tmp/rpmbuild-lustre-buildbot-uJbfPheG/BUILD/lustre-2.9.55_42_g60a4d3f/ldiskfs/ioctl.c:804:18: error: unused variable 'fa' [-Werror=unused-variable]
error: Bad exit status from /tmp/rpmbuild-lustre-buildbot-uJbfPheG/TMP/rpm-tmp.ZV9A8a (%build)